fix & feat : Fixed load image delay and disable continue button in first time